# VivoeX

./: .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  Doxyfile  LICENSE  README.md  SECURITY.md  mainpage.dox  sonar-project.properties  update.sh  version
.githooks/: pre-push  pre-push-check-conflict  pre-push-check-linter  pre-push-check-todo  pre_push_check_todo
.github/workflows/: build-centos-amd64-cyclone.yaml  build-centos-cyclone.yaml  build-debian-arm64-cyclone.yaml  build-doxygen.yaml  build-doxygen.yml  build-msys2-amd64-cyclone.yaml  build-ubuntu-cyclone.yaml  (+10 more)
dds/: CMakeLists.txt
dds/location/: CMakeLists.txt  location.cxx  locationPublisher.cxx  locationPublisher.h  locationSubscriber.cxx
gva-tools/: CMakeLists.txt  config.xml  gva-display.cc  gva-tool.cc
hmi-display/: CMakeLists.txt  config.proto  config_reader.cc  config_reader.h  debug.cc  debug.h  events_gva.cc  events_gva.h  gva.h  gva_application.cc  gva_application.h  hmi_gva.cc  hmi_gva.h  hmi_gva_helpers.cc  hmi_gva_helpers.h  main.cc  renderer.cc  renderer.h  renderer_cairo.cc  renderer_cairo.h  renderer_gva.cc  renderer_gva.h  renderer_map.cc  renderer_map.h  screen_gva.cc  screen_gva.h  tinyfsm.h  view_gva.cc  view_gva.h
hmi-display/common/: debug.cc  debug.h  log_gva.cc  log_gva.h  utils.cc  utils.h
hmi-display/config/: CMakeLists.txt  config.proto
hmi-display/sounds/: README.md
hmi-display/src/: config_reader.cc  config_reader.h  debug.cc  debug.h  events_gva.cc  events_gva.h  gva.h  gva_application.cc  gva_application.h  gva_functions_common.cc  gva_functions_common.h  hmi_gva.cc  hmi_gva.h  hmi_gva_defaults.cc  hmi_gva_defaults.h  hmi_gva_helpers.cc  hmi_gva_helpers.h  renderer.cc  renderer.h  renderer_base.h  renderer_cairo.cc  renderer_cairo.h  renderer_cairo_types.h  renderer_gva.cc  renderer_gva.h  renderer_map.cc  renderer_map.h  screen_gva.cc  screen_gva.h  status_updater.cc  status_updater.h  tinyfsm.h  touch_gva.cc  touch_gva.h  trace.h  view_gva.cc  view_gva.h
hmi-display/src/hardware/: audio.cc  audio.h  audio_functions.h
hmi-display/src/states/: alarms.cc  alarms.h  base_hmi.h  bms.cc  bms.h  com.cc  com.h  def.cc  def.h  drv.cc  drv.h  off.cc  off.h  on.cc  on.h  sa.cc  sa.h  states.h  str.cc  str.h  sys.cc  sys.h  wpn.cc  wpn.h
hmi-display/src/widgets/: CMakeLists.txt  alarm_indicator.cc  alarm_indicator.h  bottom_labels.cc  bottom_labels.h  compass.cc  compass.h  driver.cc  driver.h  keyboard.cc  keyboard.h  mode.cc  mode.h  plan_position_indicator.cc  plan_position_indicator.h  side_labels.cc  side_labels.h  table.cc  table.h  top_labels.cc  top_labels.h  widget.cc  widget.h  widget_types.h  widgets.h
hmi-display/src/widgets/ai/: object_localisation.cc  object_localisation.h
hmi-display/src/widgets/driver/: rpm_fuel.cc  rpm_fuel.h  speedometer.cc  speedometer.h
hmi-display/src/widgets/table/: cell_type.cc  cell_type.h  row_type.cc  row_type.h  status_bar.cc  status_bar.h  table.cc  table.h  table_dynamic.cc  table_dynamic.h
hmi-display/test/: CMakeLists.txt  test.cc
hmi-display/tools/: CMakeLists.txt  widget-tester.cc
hmi-display/updater/: CMakeLists.txt  updater.cc  updater.h  updater_base.h
hmi-display/widgets/: alarm_indicator.cc  alarm_indicator.h  compass.cc  compass.h  keyboard.cc  keyboard.h  table.h  widget.h
images/: README.md
info/: index.html
scripts/: Vivoe Lite.lnk  doxygencheck.sh  init-msys2.sh  init_build_machine_centos.sh  init_build_machine_msys2.sh  init_build_machine_pi.sh  init_build_machine_ubuntu.sh  set_version.sh  trace.sh  video-test-dual.sh  video-test.sh
src/: CMakeLists.txt  main.cc
src/config/: CMakeLists.txt  config.pb.cc  config.pb.h  config.proto
src/hmicore/: CMakeLists.txt  config_reader.cc  config_reader.h  debug.cc  debug.h  events_gva.cc  events_gva.h  gva.cc  gva.h  gva_application.cc  gva_application.h  gva_functions_common.cc  gva_functions_common.h  hmi_gva.cc  hmi_gva.h  hmi_gva_defaults.cc  hmi_gva_defaults.h  hmi_gva_helpers.cc  hmi_gva_helpers.h  renderer.cc  renderer.h  renderer_base.h  renderer_cairo.cc  renderer_cairo.h  renderer_cairo_types.h  renderer_gva.cc  renderer_gva.h  renderer_map.cc  renderer_map.h  screen_gva.cc  screen_gva.h  status_updater.cc  status_updater.h  tinyfsm.h  touch_gva.cc  touch_gva.h  trace.cc  trace.h  view_gva.cc  view_gva.h
src/hmicore/hardware/: CMakeLists.txt  audio.cc  audio.h  sample.cc  sample.h
src/hmicore/states/: alarms.cc  alarms.h  base_hmi.h  bms.cc  bms.h  com.cc  com.h  def.cc  def.h  drv.cc  drv.h  off.cc  off.h  on.cc  on.h  sa.cc  sa.h  str.cc  str.h  sys.cc  sys.h  wpn.cc  wpn.h
src/hmicore/widgets/: CMakeLists.txt  alarm_indicator.cc  alarm_indicator.h  bottom_labels.cc  bottom_labels.h  canvas.cc  canvas.h  keyboard.cc  keyboard.h  mode.cc  mode.h  onscreen_bezel_btns.cc  onscreen_bezel_btns.h  plan_position_indicator.cc  plan_position_indicator.h  side_labels.cc  side_labels.h  top_labels.cc  top_labels.h  widget.cc  widget.h  widget_types.h  widgets.h
src/hmicore/widgets/ai/: object_localisation.cc  object_localisation.h
src/hmicore/widgets/canvas/: canvas.cc  canvas.h  video.cc  video.h
src/hmicore/widgets/driver/: battery_bar.cc  battery_bar.h  rpm_fuel.cc  rpm_fuel.h  speedometer.cc  speedometer.h
src/hmicore/widgets/table/: cell_type.cc  cell_type.h  message_box.cc  message_box.h  row_type.cc  row_type.h  status_bar.cc  status_bar.h  table.cc  table.h  table_dynamic.cc  table_dynamic.h
src/hmidisplay/: CMakeLists.txt  gva_application.cc  gva_application.h  gva_application_types.h  main.cc
src/tools/: CMakeLists.txt  widget-tester.cc
src/updater/: CMakeLists.txt  updater.cc  updater.h  updater_base.h
src/video/: CMakeLists.txt
src/video/src/: gva_video.h  gva_video_rtp_yuv.cc
test/: CMakeLists.txt  CTestTestfile.cmake  test.cc  test_config.cc  test_events.cc  test_hmi.cc  test_log.cc  test_updater.cc  tests_config.cc
video/: CMakeLists.txt  gva_video.cc  gva_video.h  gva_video_rtp_yuv.cc  gva_video_rtp_yuv.h
video/src/: gva_video.cc  gva_video.h  gva_video_rtp_yuv.cc  gva_video_rtp_yuv.h
(+54 files in other folders)
