project(hmi-video)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/hmi-display)
include_directories(${CMAKE_SOURCE_DIR}/hmi-display)
include_directories(${CMAKE_BINARY_DIR}/external/vivoe-media-framework/src)
include_directories(${CMAKE_BINARY_DIR}/external/install/usr/local/include)
add_library(hmi-video src/gva_video.cc src/gva_video_rtp_yuv.cc)
add_dependencies(hmi-video libglog vivoe_media)
